@@ -1,5 +1,5 @@
 
-          INSTALL of  APRX 1.06
+          INSTALL of  APRX 1.90
 
 A rough-cut version of the installation instructions
 
